# pnp

./: .gitignore  CMakeLists.txt  README.md  build.sh
inc/: epnp.h  pnp_dlt.h  pnp_gn.h
src/: epnp.cpp  pnp_dlt.cpp  pnp_gn.cpp
test/: main.cpp
